$Id: History,v 1.22 2002-10-14 12:38:35 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct, 14th 2002 M.Dressel 
     cleanup according to codewizzard

Oct, 10th 2002 M.Dressel geombias-V04-01-01-internal-5
     change in G4(V)ImportanceAlgorithm, G4ImportanceSplitExaminer
     G4ImportanceFinder: give pre and post importance 
     separatly insted only ipre/ipost.

Sep, 2th 2002 M.Dressel geombias-V04-01-01-internal-4
     moved files concerning messaging a importance geometry to
     /afs/cern.ch/user/d/dressel/G4/IGeoMessangers.
     Support will be given on demand. 

Sep, 2th 2002 M.Dressel geombias-V04-01-01-internal-3
     code cleanup for code-wizard

Aug,  29th 2002 M.Dressel int-2-geombias-V04-01-01
     renaming of G4PTouchableKey to G4GeometryCell 
     changing  G4VIStore and G4IStore 
     and dependants

Aug,  13th, 2002 M.Dressel
  removed G4VPrintableScorer.hh G4VPrintableScorerFactory.hh

Aug,  13th, 2002 M.Dressel - geombias-V04-01-01
    added G4VCellScorer.hh and G4VCellScorerStore.hh

July, 18th, 2002 M.Dressel 
   change the strategy for importance sampling:
	- G4VIStore: new function:
		IsKnown(const G4PTouchableKey &ptk)
		to tell if a cell (G4PTouchableKey) is known in the