@@ -21,42 +21,41 @@
 // ********************************************************************
 //
 //
-// $Id: G4Pstring.cc,v 1.5 2002-10-14 12:36:03 dressel Exp $
+// $Id: G4StringConversion.hh,v 1.1 2002-10-16 14:30:00 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------------------------------------------------------
-// GEANT 4 class source file
+// Declaration
 //
-// G4Pstring.cc
+// Declaration description:
 //
+// This fucntions convert some non character objects into 
+// G4Strings
+
+// Author: Michael Dressel (Michael.Dressel@cern.ch)
 // ----------------------------------------------------------------------
+#ifndef G4StringConversion_hh
+#define G4StringConversion_hh G4StringConversion_hh
 
-#include "G4Pstring.hh"
+#include "globals.hh"
+#include "G4ThreeVector.hh"
 
-G4String str(const int &i)
-{
-  char s[200];
-  G4std::sprintf(s,"%d",i);
-  return s;
-}
-
-G4String str(const double &d)
-{
-  char s[200];
-  G4std::sprintf(s,"%f",d);
-  return s;
-}
-
-G4String str(const G4ThreeVector &v)
-{
-  G4String out = G4String("(");
-  out += str(v.x());
-  out += ", "; 
-  out += str(v.y()); 
-  out += ", ";
-  out += str(v.z());
-  out += ")";
-  return out;
-}
+class G4Nsplit_Weight;
 
 
+G4String str(G4int i);
+  // convert an integer into a G4String 
+
+G4String str(G4double d);
+  // convert a double into a G4String
+
+G4String str(const G4ThreeVector &v);
+  // convert a G4ThreeVector into a G4String
+
+
+G4std::ostream& operator<<(G4std::ostream &out, 
+			   const G4Nsplit_Weight &nw);
+
+G4String str(const G4Nsplit_Weight &nw);
+
+#endif
